--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,21 @@
 
 
 
+ .titleContainer{
+  width:50%;
+  margin-top:2%;
+  justify-content:center;
+  margin-left:0;
 
+  .projectContent{
+    p ul li{
+      padding-bottom:10px;
+    }
+  }
+
+
+
+}
 
 
 
